fix(button): support text overflow

--- a/packages/elemental-theme/src/custom-elements/ef-button.less
+++ b/packages/elemental-theme/src/custom-elements/ef-button.less
@@ -5,6 +5,17 @@
 :host {
   cursor: pointer;
 
+  [part=icon] {
+    flex: none;
+  }
+  &:not([empty]) [part=label] {
+    white-space: inherit;
+    overflow: inherit;
+    text-overflow: inherit;
+    min-width: 0;
+    flex: 1 1 auto;
+  }
+
   .desktop-specific({
     &:hover #icon {
       display: none;
